src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Reference_Checks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Accepted Reference Checks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Roles</relationshipLabel>
        <relationshipName>Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>CASE(TEXT(Status__c), 
&quot;Draft&quot;, &quot;Draft&quot;,  
&quot;Submitted&quot;, &quot;Submitted&quot;,
&quot;Pending Referee/CR Checks&quot;, &quot;In Progress&quot;,
&quot;Pending Interviews&quot;, &quot;In Progress&quot;,
&quot;References Successful&quot;, &quot;In Progress&quot;,
&quot;Recruitment Checks Complete&quot;, &quot;In Progress&quot;,
&quot;Unsuccessful - Role Filled&quot;, &quot;Closed&quot;,
&quot;Unsuccessful - Not Suitable at Interview&quot;, &quot;Closed&quot;,
&quot;Unsuccessful - Not Suitable for Interview&quot;, &quot;Closed&quot;,
&quot;Unsuccessful - Unsuitable References&quot;, &quot;Closed&quot;,
&quot;Unsuccessful - Unsuitable Risk Assessment&quot;, &quot;Closed&quot; ,
&quot;Successful&quot; , &quot;In Progress&quot; ,
&quot;References Successful&quot;, &quot;In Progress&quot;,
&quot;Withdrawn&quot;, &quot;Withdrawn&quot; ,
&quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Application Status which the Volunteer will see</inlineHelpText>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatic_Deletion_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Deletion Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Activate_Criminal_Check__c</fullName>
        <formula>IF ((ISPICKVAL( Role__r.DBS_Check_required__c , &apos;No Check Required&apos;) || (NOT(ISPICKVAL( Role__r.DBS_Check_required__c , &apos;No Check Required&apos;)) &amp;&amp; Criminal_Check_OK__c)), true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Activate Criminal Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Activate_References__c</fullName>
        <formula>IF ((ISPICKVAL(Role__r.Number_of_References_Required__c,&quot;0&quot;) ||  References_OK__c) , true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Activate References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Activate_Vehicle__c</fullName>
        <formula>IF ((!Role__r.Vehicle_Check_Required__c || (Role__r.Vehicle_Check_Required__c &amp;&amp; Vehicle_Check_OK__c)), true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Activate Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>College_Univeristy_Workplace_Contact__c</fullName>
        <label>College/Univeristy/Workplace Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Univeristy_Workplace_Phone__c</fullName>
        <label>College/Univeristy/Workplace Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>College_Univeristy_Workplace__c</fullName>
        <label>College/Univeristy/Workplace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Formula field for Ascent report</description>
        <formula>Applicant__r.FirstName &amp; &apos; &apos; &amp; Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Informed_of_Application_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Informed of Application Outcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convicted_of_Criminal_Offence__c</fullName>
        <label>Convicted of Criminal Offence?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Billing_City__c</fullName>
        <label>Corporate Account Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Billing_Country__c</fullName>
        <label>Corporate Account Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Billing_PostalCode__c</fullName>
        <label>Corporate Account Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Billing_State__c</fullName>
        <label>Corporate Account Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Billing_Street__c</fullName>
        <label>Corporate Account Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Name__c</fullName>
        <label>Corporate Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Account_Phone__c</fullName>
        <label>Corporate Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Criminal_Check_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Criminal Check OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criminal_Offence_Details__c</fullName>
        <label>Please Give Details of Criminal Offence</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_Record_Check__c</fullName>
        <formula>IF ((ISPICKVAL( Role__r.DBS_Check_required__c , &apos;No Check Required&apos;) || (NOT(ISPICKVAL( Role__r.DBS_Check_required__c , &apos;No Check Required&apos;)) &amp;&amp; Criminal_Check_OK__c)), IMAGE(&apos;/resource/1391432643000/GreenTick&apos;,&apos;Complete&apos;,22,26) , IMAGE(&apos;/resource/1391432656000/RedCross&apos;,&apos;Not Complete&apos;,22,26))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criminal Record Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Suspension__c</fullName>
        <inlineHelpText>If the Volunteer is suspended for this role, enter the date from which the suspension applies here</inlineHelpText>
        <label>Date of Suspension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duties_and_Main_Achievements2__c</fullName>
        <label>2. Duties and Main Achievements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duties_and_Main_Achievements3__c</fullName>
        <label>3. Duties and Main Achievements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duties_and_Main_Achievements__c</fullName>
        <label>1. Duties and Main Achievements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_s_name_address_From_To2__c</fullName>
        <label>2. Employer&apos;s name &amp; address: From /To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_s_name_address_From_To3__c</fullName>
        <label>3. Employer&apos;s name &amp; address: From /To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_s_name_address_From_To__c</fullName>
        <label>1. Employer&apos;s Name &amp; Address: From /To</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experience_Qualifications__c</fullName>
        <inlineHelpText>Please tell us how your experience, skills and qualifications meet the requirements of the volunteer role you have applied for.  Refer to the role description which explains the skills and experience we are looking for.</inlineHelpText>
        <label>Experience/Qualifications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grades2__c</fullName>
        <label>2. Grades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grades3__c</fullName>
        <label>3. Grades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grades__c</fullName>
        <label>1. Grades</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Induction__c</fullName>
        <inlineHelpText>This is data from ENVIS indicating the date the volunteer received an induction for this role</inlineHelpText>
        <label>Group Induction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_this_Opportunity__c</fullName>
        <label>How did you hear about this Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Volunteer_Role_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Volunteer Role ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Declariation__c</fullName>
        <label>Legal Declariation Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_No2__c</fullName>
        <label>2. Membership No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_No3__c</fullName>
        <label>3. Membership No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_No__c</fullName>
        <label>1. Membership No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_of_professional_bodies2__c</fullName>
        <label>2. Membership Of Professional Bodies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Membership_of_professional_bodies3__c</fullName>
        <label>3. Membership Of Professional Bodies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Membership_of_professional_bodies__c</fullName>
        <label>1. Membership of Professional Bodies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NVIS_Account_No__c</fullName>
        <externalId>true</externalId>
        <label>NVIS Account No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Address_Dates_to_and_from2__c</fullName>
        <label>2. Name/Address/Dates to and from</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Address_Dates_to_and_from3__c</fullName>
        <label>3. Name/Address/Dates to and from</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Address_Dates_to_and_from__c</fullName>
        <label>1. Name/Address/Dates to and from</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Corporate_Volunteers__c</fullName>
        <label>Number of Corporate Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Present_Recent_Employment_VoluntaryWork2__c</fullName>
        <label>2. Present/Recent Employment/Volun Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Present_Recent_Employment_VoluntaryWork3__c</fullName>
        <label>3. Present/Recent Employment/Volun Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Present_Recent_Employment_Voluntary_Work__c</fullName>
        <label>1. Present/Recent Employment/Volun Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualification2__c</fullName>
        <label>2. Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualification3__c</fullName>
        <label>3. Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>1. Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Suspended__c</fullName>
        <inlineHelpText>Enter the reasons the Volunteer is suspended here</inlineHelpText>
        <label>Reason Suspended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_leaving__c</fullName>
        <label>Reason for Leaving</label>
        <picklist>
            <picklistValues>
                <fullName>Asked to stop by RNIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisting another UK agency as volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes in RNIB policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfaction with RNIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ill health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of RNIB support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave RNIB altogether</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to another role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving into employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving to help another RNIB service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer feel able to carry out the role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not being used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other commitments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reached retirement age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/role ceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short volunteering opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferring to Action for the Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to a new role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to a new service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Check__c</fullName>
        <formula>IF ( (ISPICKVAL(Role__r.Number_of_References_Required__c, &quot;0&quot;) || References_OK__c) , IMAGE(&apos;/resource/1391432643000/GreenTick&apos;,&apos;Complete&apos;,22,26) , IMAGE(&apos;/resource/1391432656000/RedCross&apos;,&apos;Not Complete&apos;,22,26))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>References OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>References_Unavailable_Explanation__c</fullName>
        <label>References Unavailable Explanation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>References_Unavailable__c</fullName>
        <label>References Unavailable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_to_Retire__c</fullName>
        <formula>Applicant__r.Request_to_Retire__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will be ticked if the Volunteer has requested to retire either by updating their profile on the community of if another Volunteer manager has learned this.  Please follow up with the Volunteer regarding the status of your role with them</inlineHelpText>
        <label>Request to Retire?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Assessments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Risk Assessments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <formula>&quot;See Opportunity Record&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Source__c</fullName>
        <label>Role Source</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <formula>Role__r.Role_Title__c</formula>
        <label>Role Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Role_Opportunity__c</referenceTo>
        <relationshipLabel>Volunteer Roles</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_College_Contact__c</fullName>
        <label>School/College Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_College_Phone__c</fullName>
        <label>School/College Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <label>School/College</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_University_HE_Institution2__c</fullName>
        <label>2. School/University/HE Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_University_HE_Institution3__c</fullName>
        <label>3. School/University/HE Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_University_HE_Institution__c</fullName>
        <label>1. School/University/HE Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Technology Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Referee/CR Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>References Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment Checks Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Role Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Not Suitable at Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Not Suitable for Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Unsuitable References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful - Unsuitable Risk Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact GVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resigned from Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subjects2__c</fullName>
        <label>2. Subjects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subjects3__c</fullName>
        <label>3. Subjects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <label>1. Subjects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Suspension_Ended__c</fullName>
        <inlineHelpText>Enter the date the suspension has been lifted here</inlineHelpText>
        <label>Suspension Ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tell_us_about_yourself__c</fullName>
        <inlineHelpText>It will be easier to manage your application if you provide the information in these fields</inlineHelpText>
        <label>Tell Us about Yourself</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Workflow__c</fullName>
        <description>Testing the workflow to make sure that the trigger is deleting the record as it should be.</description>
        <label>Test Workflow</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trigger_Time_05__c</fullName>
        <formula>IF(ISNULL(Test_Workflow__c),NULL, Test_Workflow__c -  0.016)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time 05</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unavailable__c</fullName>
        <formula>Applicant__r.Holiday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this box is checked the Volunteer has indicated on the portal that they are unavailable</inlineHelpText>
        <label>Unavailable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Check_Image__c</fullName>
        <formula>IF ((NOT(Role__r.Vehicle_Check_Required__c) || (Role__r.Vehicle_Check_Required__c &amp;&amp; Vehicle_Check_OK__c)), IMAGE(&apos;/resource/1391432643000/GreenTick&apos;,&apos;Complete&apos;,22,26) , IMAGE(&apos;/resource/1391432656000/RedCross&apos;,&apos;Not Complete&apos;,22,26))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Check_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Check OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voluntary_or_Work_Experience__c</fullName>
        <label>Voluntary or Work Experience</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Coordinator__c</fullName>
        <label>Volunteer Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager__c</fullName>
        <label>Volunteer Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_do_work_experience_with_RNIB__c</fullName>
        <label>Why do Work Experience with RNIB</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_do_you_want_to_volunteer_for_us__c</fullName>
        <label>Why do You Want to Volunteer for Us?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Volunteer Role</label>
    <listViews>
        <fullName>Active_Volunteer_Roles</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Role__c</columns>
        <columns>Role_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Volunteer_Coordinator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Role</value>
        </filters>
        <label>Active Volunteer Roles</label>
    </listViews>
    <listViews>
        <fullName>All_Volunteer_Roles</fullName>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Check__c</columns>
        <columns>Criminal_Record_Check__c</columns>
        <columns>Vehicle_Check_Image__c</columns>
        <columns>Accepted_Reference_Checks__c</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Volunteer Roles</label>
    </listViews>
    <listViews>
        <fullName>Applications_Pending_Interviews</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Applicant__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Interviews</value>
        </filters>
        <label>Applications Pending Interviews</label>
    </listViews>
    <listViews>
        <fullName>Applications_Pending_Referee_DBS_Checks</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Role__c</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Accepted_Reference_Checks__c</columns>
        <columns>Volunteer_Coordinator__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Referee/CR Checks</value>
        </filters>
        <label>Applications Pending Referee/CR Checks</label>
    </listViews>
    <listViews>
        <fullName>Applications_Recruitment_Checks_Complete</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Role__c</columns>
        <columns>Role_Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Accepted_Reference_Checks__c</columns>
        <columns>Volunteer_Coordinator__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Recruitment Checks Complete</value>
        </filters>
        <label>Applications Recruitment Checks Complete</label>
    </listViews>
    <listViews>
        <fullName>Applications_References_Successful</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Applicant__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>Criminal_Record_Check__c</columns>
        <columns>Reference_Check__c</columns>
        <columns>Vehicle_Check_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>References Successful</value>
        </filters>
        <label>Applications References Successful</label>
    </listViews>
    <listViews>
        <fullName>Applications_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Reference_Check__c</columns>
        <columns>Status__c</columns>
        <columns>Applicant__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Service__c</columns>
        <columns>Role_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Applications Submitted</label>
    </listViews>
    <listViews>
        <fullName>Applications_role_filled</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unsuccessful - Role Filled</value>
        </filters>
        <label>Unsuccessful - Role Filled</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Role_Title__c</columns>
        <columns>Volunteer_Manager__c</columns>
        <columns>Reference_Check__c</columns>
        <columns>Vehicle_Check_Image__c</columns>
        <columns>Criminal_Record_Check__c</columns>
        <columns>Status__c</columns>
        <columns>Applicant__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Service__c</columns>
        <columns>Role_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Applications Created Today</label>
    </listViews>
    <listViews>
        <fullName>Draft_Volunteer_Roles</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Reference_Check__c</columns>
        <columns>Criminal_Record_Check__c</columns>
        <columns>Vehicle_Check_Image__c</columns>
        <columns>Accepted_Reference_Checks__c</columns>
        <columns>Role_Title__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft Volunteer Roles</label>
    </listViews>
</CustomObject>